--- a/app/src/main/res/layout/fragment_login_register.xml
+++ b/app/src/main/res/layout/fragment_login_register.xml
@@ -25,7 +25,7 @@
         android:layout_width="250dp"
         android:layout_height="75dp"
         android:layout_marginBottom="36dp"
-        android:text="TEST"
+        android:text=""
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="20dp"
